--- a/src/app.css
+++ b/src/app.css
@@ -70,10 +70,6 @@ a:hover {
 	text-decoration: underline;
 }
 
-h1 {
-	font-size: 2rem;
-	text-align: center;
-}
 
 h2 {
 	font-size: 1rem;
@@ -94,6 +90,7 @@ input,
 button {
 	font-size: inherit;
 	font-family: inherit;
+    cursor: pointer;
 }
 
 button:focus:not(:focus-visible) {
